--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
 							closeButton.addEventListener("click", function() {
 								messageDisplayDiv.textContent = ""; // Clear the text
 								messageDisplayDiv.style.display = "none"; // Hide the overlay after clearing the text
-								closeButton.remove(); // Remove the close button
+								//closeButton.remove(); // Remove the close button
 							});
 							// Append the close button to messageDisplayDiv
 							messageDisplayDiv.appendChild(closeButton);
