--- a/index.html
+++ b/index.html
@@ -30,149 +30,148 @@
 		<!-- Movement>-->
 		<div id="messageDisplayDiv"></div>
 		<script>
-			//Script for pairing with Avatar_BT
-			let characteristic;
-			let isConnected = false; // Track connection state
-			let device; // Declare device variable.
-			var message;
-			let partMoving = "";
-			let directionMoving = "";
-			let patternMovement ="";
-			var blueToothStatus = "Avatar Offline";
-			var streetName = "Unknown";
-			var deviceName ="";
-			let labels = ["EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY",];
-			let moveSource = null;
-			let movePatterns = null;
-			let sentenceSource = null;
-			let tagSource = null;
-			let checkpointsSource = 'points.json';
+				//Script for pairing with Avatar_BT
+				let characteristic;
+				let isConnected = false; // Track connection state
+				let device; // Declare device variable.
+				var message;
+				let partMoving = "";
+				let directionMoving = "";
+				let patternMovement ="";
+				var blueToothStatus = "Avatar Offline";
+				var streetName = "Unknown";
+				var deviceName ="";
+				let labels = ["EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY","EMPTY",];
+				let moveSource = null;
+				let movePatterns = null;
+				let sentenceSource = null;
+				let tagSource = null;
+				let checkpointsSource = 'points.json';
 
-			var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
-			onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var alert_Sound = new Howl({src: ['audio/alert_high-intensity.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
-			onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var success_Sound = new Howl({src: ['audio/navigation_selection-complete-celebration.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
-			onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var barking_Sound = new Howl({src: ['audio/barking.mp3'],
-			onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var barking_Sound = new Howl({src: ['audio/barking.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			var talking_Sound = new Howl({src: ['audio/talking.mp3'],
-			onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var talking_Sound = new Howl({src: ['audio/talking.mp3'],
+				onloaderror: function(error) {console.error('Error loading audio:', error);},});
 
-			async function connectToDevice() {
-				try {
-					if (!isConnected) {
-						// Request Bluetooth device
-						device = await navigator.bluetooth.requestDevice({
-							filters: [{ services: ["6e400001-b5a3-f393-e0a9-e50e24dcca9e"] }],
-						});
-						// Connect to the selected device
-						const server = await device.gatt.connect();
-						// Get UART service
-						const service = await server.getPrimaryService("6e400001-b5a3-f393-e0a9-e50e24dcca9e");
-						// Get UART characteristic
-						characteristic = await service.getCharacteristic("6e400003-b5a3-f393-e0a9-e50e24dcca9e");
-						// Start notifications for the characteristic
-						await characteristic.startNotifications();
-						 // Get the device name
-						deviceName = device.name;
-
-						if (deviceName === "hachi_BT") {
-							console.log("Loading settings for Hachi_BT");
-							labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "TAIL", "BACK LEG"];
-							moveSource = 'hachi_moves.json';
-							movePatterns = 'hachi_patterns.json';
-							sentenceSource = 'hachi_sentences.json';
-							tagSource = 'tags.json';
-						} else {
-							console.log("Loading settings for Avatar_BT");
-							labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
-							moveSource = 'avatar_moves.json';
-							movePatterns = 'avatar_patterns.json';
-							sentenceSource = 'avatar_sentences.json';
-							tagSource = 'tags.json';
-						}
-						// Listen for characteristic value changes
-						characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
-						// Update UI
-						document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Avatar';
-						isConnected = true;
-						setTimeout(function() {
-							startDetectMovement = true;
-							blueToothStatus = "Avatar Online";
-						}, 4000);
-					} else {
-						// Disconnect from the device
-						await characteristic.stopNotifications();
-						await device.gatt.disconnect();
-						isConnected = false;
-						document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_searching </span> Connect to Avatar';
-						// Set all potValues to 0
-						setTimeout(function() {
-							startDetectMovement = false;
-							potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0];
-							blueToothStatus = "Avatar Offline";
-						}, 4000);
-					}
-				} catch (error) {
-					console.error("Error connecting/disconnecting: " + error);
-				}
-			}
-			// Attach click event listener to button.
-			document.getElementById("connectButton").addEventListener("click", connectToDevice);
-			// Function to handle incoming data from UART
-			function handleCharacteristicValueChanged(event) {
-				const value = event.target.value;
-				// Convert the received data to a string
-				const textDecoder = new TextDecoder();
-				const decodedValue = textDecoder.decode(value);
-				// Pass the received data to Processing sketch
-				receiveData(decodedValue);
-			}
-			// Function to receive data from JavaScript
-			function receiveData(data) {
-				if (window.receiveDataFromSerial) {
-					window.receiveDataFromSerial(data);
-				} else {
-					console.error("Processing sketch not initialized.");
-				}
-			}
-
-			function wakeLock() {
-				if ('wakeLock' in navigator) {
-							navigator.wakeLock.request('screen').then(() => {
-								console.log('Screen wake lock activated');
-							}).catch((err) => {
-								console.error('Failed to activate wake lock:', err);
+				async function connectToDevice() {
+					try {
+						if (!isConnected) {
+							// Request Bluetooth device
+							device = await navigator.bluetooth.requestDevice({
+								filters: [{ services: ["6e400001-b5a3-f393-e0a9-e50e24dcca9e"] }],
 							});
+							// Connect to the selected device
+							const server = await device.gatt.connect();
+							// Get UART service
+							const service = await server.getPrimaryService("6e400001-b5a3-f393-e0a9-e50e24dcca9e");
+							// Get UART characteristic
+							characteristic = await service.getCharacteristic("6e400003-b5a3-f393-e0a9-e50e24dcca9e");
+							// Start notifications for the characteristic
+							await characteristic.startNotifications();
+							 // Get the device name
+							deviceName = device.name;
+
+							if (deviceName === "hachi_BT") {
+								console.log("Loading settings for Hachi_BT");
+								labels = ["EMPTY", "EMPTY", "EMPTY", "EMPTY", "HEAD", "FRONT LEG", "TAIL", "BACK LEG"];
+								moveSource = 'hachi_moves.json';
+								movePatterns = 'hachi_patterns.json';
+								sentenceSource = 'hachi_sentences.json';
+								tagSource = 'tags.json';
+							} else {
+								console.log("Loading settings for Avatar_BT");
+								labels = ["LEFT FOREARM", "LEFT SHOULDER", "HEAD", "RIGHT SHOULDER", "RIGHT FOREARM", "WAIST", "LEFT LEG", "RIGHT LEG"];
+								moveSource = 'avatar_moves.json';
+								movePatterns = 'avatar_patterns.json';
+								sentenceSource = 'avatar_sentences.json';
+								tagSource = 'tags.json';
+							}
+							// Listen for characteristic value changes
+							characteristic.addEventListener("characteristicvaluechanged", handleCharacteristicValueChanged);
+							// Update UI
+							document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_connected</span> Disconnect Avatar';
+							isConnected = true;
+							setTimeout(function() {
+								startDetectMovement = true;
+								blueToothStatus = "Avatar Online";
+							}, 4000);
 						} else {
-							console.warn('Wake lock API not supported');
+							// Disconnect from the device
+							await characteristic.stopNotifications();
+							await device.gatt.disconnect();
+							isConnected = false;
+							document.getElementById("connectButton").innerHTML = '<span class="material-icons" style="vertical-align: middle;">bluetooth_searching </span> Connect to Avatar';
+							// Set all potValues to 0
+							setTimeout(function() {
+								startDetectMovement = false;
+								potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0];
+								blueToothStatus = "Avatar Offline";
+							}, 4000);
 						}
-			}
-
-			function checkVariables() {
-				// Check if latitude, longitude, and weatherDescription are not null
-				if (latitude !== null && longitude !== null && weatherDescription !== null) {
-					fetchStreetName().then((name) => {
-						streetName = name;
-						connectButton.disabled = false;
-						displayText("Ready to connect to Avatar BT");
-						});
-				} else {
-					// If any variable is still null, wait for a short delay and check again
-					setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
+					} catch (error) {
+						console.error("Error connecting/disconnecting: " + error);
+					}
 				}
-			}
+				// Attach click event listener to button.
+				document.getElementById("connectButton").addEventListener("click", connectToDevice);
+				// Function to handle incoming data from UART
+				function handleCharacteristicValueChanged(event) {
+					const value = event.target.value;
+					// Convert the received data to a string
+					const textDecoder = new TextDecoder();
+					const decodedValue = textDecoder.decode(value);
+					// Pass the received data to Processing sketch
+					receiveData(decodedValue);
+				}
+				// Function to receive data from JavaScript
+				function receiveData(data) {
+					if (window.receiveDataFromSerial) {
+						window.receiveDataFromSerial(data);
+					} else {
+						console.error("Processing sketch not initialized.");
+					}
+				}
 
-			// Call the function when the script is loaded
-			window.onload = checkVariables;
+				function wakeLock() {
+					if ('wakeLock' in navigator) {
+								navigator.wakeLock.request('screen').then(() => {
+									console.log('Screen wake lock activated');
+								}).catch((err) => {
+									console.error('Failed to activate wake lock:', err);
+								});
+							} else {
+								console.warn('Wake lock API not supported');
+							}
+				}
 
-			// Function to redirect console.log and console.error to a div
-			function redirectConsoleToDiv() {
+				function checkVariables() {
+					// Check if latitude, longitude, and weatherDescription are not null
+					if (latitude !== null && longitude !== null && weatherDescription !== null) {
+						fetchStreetName().then((name) => {
+							streetName = name;
+							connectButton.disabled = false;
+							displayText("Ready to connect to Avatar BT");
+							});
+					} else {
+						// If any variable is still null, wait for a short delay and check again
+						setTimeout(checkVariables, 1000); // Adjust delay as needed (here 1000 milliseconds or 1 second)
+					}
+				}
+
+				// Call the function when the script is loaded
+				window.onload = checkVariables;
+
+				function redirectConsoleToDiv() {
 				var consoleOutputDiv = document.getElementById('consoleOutput');
 				if (!consoleOutputDiv) {
 					console.error("Div for console output not found");
@@ -183,23 +182,36 @@
 				var originalConsoleLog = console.log;
 				var originalConsoleError = console.error;
 
+				var logMessages = []; // Array to store log messages
+				var errorMessages = []; // Array to store error messages
+
 				// Override console.log to append messages to the div
 				console.log = function(...args) {
 					originalConsoleLog(...args);
 					var consoleMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML = '<div class="log">'+"<strong>DEBUG CONSOLE LOG:</strong> " + consoleMessage + '</div>';
+					logMessages.push("<strong>DEBUG CONSOLE LOG:</strong> " + consoleMessage);
+					updateConsoleOutput();
 				};
 
 				// Override console.error to append error messages to the div
 				console.error = function(...args) {
 					originalConsoleError(...args);
 					var consoleMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
-					consoleOutputDiv.innerHTML = '<div class="error">'+ "<strong>DEBUG CONSOLE ERROR:</strong> " + consoleMessage + '</div>';
+					errorMessages.push("<strong>DEBUG CONSOLE ERROR:</strong> " + consoleMessage);
+					updateConsoleOutput();
 				};
+
+				// Function to update the console output with the last two messages
+				function updateConsoleOutput() {
+					var combinedMessages = logMessages.concat(errorMessages);
+					var lastTwoMessages = combinedMessages.slice(-2); // Get the last two messages
+					consoleOutputDiv.innerHTML = lastTwoMessages.map(msg => '<div class="log">' + msg + '</div>').join('');
+				}
 			}
 
-			// Call the function to redirect console.log and console.error to the div
-			redirectConsoleToDiv();
+
+				// Call the function to redirect console.log and console.error to the div
+				redirectConsoleToDiv();
 		</script>
 
 		<script>
