--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+		<script src="https://apis.google.com/js/api.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
@@ -1013,6 +1014,8 @@
 			}
 		</script>
 		<script>
+
+
 			// Reading writing to Google Sheets
 			// Load the Google Sheets API client library
 			gapi.load('client', initClient);
