--- a/index.html
+++ b/index.html
@@ -1020,17 +1020,17 @@
 
 			// Initialize the Google Sheets API client
 			function initClient() {
-			gapi.client.init({
-				// apiKey: 'YOUR_API_KEY', // Remove or comment out the API key
-				discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
-				clientId: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com',
-				scope: 'https://www.googleapis.com/auth/spreadsheets',
-			}).then(() => {
-				// Authentication succeeded, you can now make requests to the API
-				readAndWriteToSpreadsheet();
-			}, (error) => {
-				console.error('Error initializing API client:', error);
-			});
+				gapi.client.init({
+					// apiKey: 'YOUR_API_KEY', // Remove or comment out the API key
+					discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
+					clientId: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com',
+					scope: 'https://www.googleapis.com/auth/spreadsheets',
+				}).then(() => {
+					// Authentication succeeded, you can now make requests to the API
+					setInterval(readAndWriteToSpreadsheet, 1000);
+				}, (error) => {
+					console.error('Error initializing API client:', error);
+				});
 			}
 
 			// Function to read and write data to a Google Sheets spreadsheet
