--- a/index.html
+++ b/index.html
@@ -1015,29 +1015,32 @@
 		</script>
 		<script>
 
-			// Load the Google Sheets API client library
-			gapi.load('client', initClient);
 
-			// Initialize the Google Sheets API client
-			function initClient() {
-				gapi.client.init({
-					// apiKey: 'YOUR_API_KEY', // Remove or comment out the API key
-					discoveryDocs: ["https://sheets.googleapis.com/$discovery/rest?version=v4"],
-					clientId: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com',
-					scope: 'https://www.googleapis.com/auth/spreadsheets',
-				}).then(() => {
-					// Authentication succeeded, you can now make requests to the API
-					setInterval(readAndWriteToSpreadsheet, 1000);
-				}, (error) => {
-					console.error('Error initializing API client:', error);
-				});
-			}
+						gapi.load('auth2', function() {
+						// Initialize the GoogleAuth object
+						gapi.auth2.init({
+							client_id: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com',
+							scope: 'https://www.googleapis.com/auth/spreadsheets',
+						}).then(function(auth2) {
+							// Sign in the user
+							return auth2.signIn();
+						}).then(function() {
+							// User has signed in, obtain access token
+							var googleUser = gapi.auth2.getAuthInstance().currentUser.get();
+							var authResponse = googleUser.getAuthResponse();
+							var accessToken = authResponse.access_token;
+							console.log('Access token:', accessToken);
 
-			// Function to read and write data to a Google Sheets spreadsheet
-			function readAndWriteToSpreadsheet() {
-			// Construct latitude, longitude, and passage values elsewhere
+							// Now you can use the accessToken to authenticate API requests to Google Sheets API
+							readAndWriteToSpreadsheet(accessToken);
+						}).catch(function(error) {
+							console.error('Authentication error:', error);
+						});
+						});
 
-			  const passage = 0;
+
+							// Function to read and write data to a Google Sheets spreadsheet
+			function readAndWriteToSpreadsheet(accessToken) {
 
 			  // Values to be written to the spreadsheet
 			  let valuesToWrite;
@@ -1068,12 +1071,18 @@
 			    valueInputOption: 'RAW',
 			    resource: {
 			      values: valuesToWrite
+			    },
+			    headers: {
+			      Authorization: 'Bearer ' + accessToken // Include access token in the headers
 			    }
 			  }).then(() => {
 			    // After writing, read cells from the other range
 			    gapi.client.sheets.spreadsheets.values.get({
 			      spreadsheetId: '1FC7ZTfggoxfqSstoAyaqjP0r1LyPKr44HxTn7VqpN7o',
 			      range: readRange, // Range to read
+			      headers: {
+			        Authorization: 'Bearer ' + accessToken // Include access token in the headers
+			      }
 			    }).then((response) => {
 			      const valuesRead = response.result.values;
 			      const other_latitude = valuesRead[0][0];
