--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 		<script src="https://apis.google.com/js/api.js"></script>
+		<script src="https://accounts.google.com/gsi/client" async defer></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
