--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,10 @@
 
 						    // Now you can use the access token to authenticate API requests to Google Sheets API
 						    readAndWriteToSpreadsheet(accessToken);
+							console.log("Authenticated...");
+							setInterval(function() {
+			   readAndWriteToSpreadsheet(accessToken);
+			 }, 5000); // 1000 milliseconds = 1 second
 						  } else if (response.error) {
 						    console.error('Authentication error:', response.error);
 						  }
