--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,7 @@
 			  google.accounts.id.initialize({
 			    client_id: 'YOUR_CLIENT_ID',
 			    callback: handleCredentialResponse
+				console.log("Google ID loaded");
 			  });
 			};
 
