--- a/index.html
+++ b/index.html
@@ -1016,10 +1016,10 @@
 		</script>
 		<script>
 
-						// Load the Google Identity Services library
-						window.onload = function() {
+			// Load the Google Identity Services library
+			window.onload = function() {
 			  google.accounts.id.initialize({
-			    client_id: 'YOUR_CLIENT_ID',
+			    client_id: '1074186074798-4nrbq9rthttrjmimsc6v7i0emb9pg8f7.apps.googleusercontent.com',
 			    callback: handleCredentialResponse
 			  });
 			  console.log("Google ID loaded");
@@ -1044,7 +1044,6 @@
 				}
 			}
 
-			handleCredentialResponse();
 			// Function to read and write data to a Google Sheets spreadsheet
 			function readAndWriteToSpreadsheet(accessToken) {
 
