--- a/index.html
+++ b/index.html
@@ -1025,6 +1025,7 @@
 			  console.log("Google ID loaded");
 			};
 
+			var accessToken;
 			// Function to handle the response from Google Identity Services
 			function handleCredentialResponse(response) {
 				console.log("Inside handle");
@@ -1032,7 +1033,7 @@
 				var credential = response.credential;
 
 				// Obtain the access token from the credential
-				var accessToken = credential.id_token;
+				accessToken = credential.id_token;
 
 				// Now you can use the access token to authenticate API requests to Google Sheets API
 				readAndWriteToSpreadsheet(accessToken);
