--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,7 @@
 						console.log("Interval");
 					}, 5000); // 1000 milliseconds = 1 second
 
+			var passage = 0;
 			// Function to read and write data to a Google Sheets spreadsheet
 			function readAndWriteToSpreadsheet(accessToken) {
 
